--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -114,6 +114,22 @@
           <a href="https://www.youtube.com/watch?v=yGm-gAO9mRQ&ab_channel=CyberInsecurity" target="_blank">The 1st Rule to Land Your Cyber Security Career</a> : Cyber Insecurity <br><br>
         </p>
         <br><br>
+        <h3>Day 10: Oct 19 2021</h3><br>
+        <p>
+          <a href="https://ctf.hackthebox.com/ctfs" target="_blank">Auth0-CTF</a>: HackTheBox <br><br>
+          <a href="https://jornadas2021.ctf.cert.rcts.pt/" target="_blank">Jornadas 2021 CTF</a> <br><br>
+          Book: Hacking - The Art of Exploitation: Chapter 0x100. Introduction <br><br>
+          Book: Advanced Penetration Testing: Introduction <br><br>
+          <a href="https://tryhackme.com/room/pentestingfundamentals" target="_blank">Pentesting Fundamentals</a>: TryHackMe <br><br>
+          <a href="https://tryhackme.com/room/principlesofsecurity" target="_blank">Principles of Security</a>: TryHackMe <br><br>
+          <a href="https://www.youtube.com/watch?v=UgQM0rVDIQE&ab_channel=Computerphile" target="_blank">Wifi’s Hidden ____ Problem</a>: Computerphile <br><br>
+        </p>
+        <br><br>
+        <h3>Day 11: Oct 20 2021</h3><br>
+          <a href="https://www.youtube.com/watch?v=YzP3ZL4vlkY&ab_channel=AndroidAuthority" target="_blank">How easy is it to capture data on public free Wi-Fi? - Gary explains</a>: Android Authority <br><br>
+          <a href="https://www.youtube.com/watch?v=G2_5rPbUDNA&ab_channel=VICENews" target="_blank">This Is How Easy It Is To Get Hacked | VICE on HBO</a>: Vice News <br><br>
+          <a href="https://www.youtube.com/watch?v=pL9q2lOZ1Fw&t=1s&ab_channel=TechInsider" target="_blank">Watch hackers break into the US power grid</a>: Tech Insider <br><br>
+          <a href="https://www.youtube.com/watch?v=mQT38VR4boQ&t=6145s&ab_channel=JohnHammond" target="_blank">TryHackMe - Throwback - Attacking Windows Active Directory || Part One</a>: John Hammond <br><br>
         <hr>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
