--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -22,10 +22,10 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#tryhackme"></a>
+            <a class="nav-link" href="#week1">Week 1</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#utsa-cyber-range"></a>
+            <a class="nav-link" href="#week2">Week 2</a>
           </li>
         </ul>
       </div>
@@ -39,7 +39,7 @@
         <h1>Daily</h1> <br><br>
         <h1 id="tryhackme" style="color:DodgerBlue">100 Days of Hacking Challenge</h1><br>
         <hr>
-        <h2>Week 1</h2> <br><br><br>
+        <h2 id="week1">Week 1</h2> <br><br><br>
         <h3>Day 1: Oct 10 2021</h3><br>
         <p>
           <a href="https://www.hackthebox.eu/blog/how-to-become-a-pentester" target="_blank">How to Become a Pentester</a> : HackTheBox <br><br>
@@ -93,7 +93,7 @@
           <a href="https://www.youtube.com/watch?v=-wMU8vmfaYo&t=1561s&ab_channel=BenEater" target="_blank">Why was Facebook down for five hours?</a> : Ben Eater<br><br>
         </p>
         <hr>
-        <h2>Week 2</h2>
+        <h2 id="week2">Week 2</h2>
         <br><br><br>
         <h3>Day 8: Oct 17 2021</h3><br>
         <p>
@@ -130,6 +130,13 @@
           <a href="https://www.youtube.com/watch?v=G2_5rPbUDNA&ab_channel=VICENews" target="_blank">This Is How Easy It Is To Get Hacked | VICE on HBO</a>: Vice News <br><br>
           <a href="https://www.youtube.com/watch?v=pL9q2lOZ1Fw&t=1s&ab_channel=TechInsider" target="_blank">Watch hackers break into the US power grid</a>: Tech Insider <br><br>
           <a href="https://www.youtube.com/watch?v=mQT38VR4boQ&t=6145s&ab_channel=JohnHammond" target="_blank">TryHackMe - Throwback - Attacking Windows Active Directory || Part One</a>: John Hammond <br><br>
+        <hr>
+        <h3>Day 12: Oct 21 2021</h3><br>
+        <a href="https://www.youtube.com/watch?v=xGjGQ24cXAY&t=444s&ab_channel=AndroidAuthority" target="_blank">What is VPN? - Gary explains</a>: Android Authority <br><br>
+        Attended Cyber Security CTF Team meeting <br><br>
+        Attended Alamo AFCEA Emerging Leaders: Mentor Protege Night <br><br>
+        <a href="https://www.youtube.com/watch?v=mQT38VR4boQ&t=6145s&ab_channel=JohnHammond" target="_blank">TryHackMe - Throwback - Attacking Windows Active Directory || Part One</a>: John Hammond <br><br>
+        <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>
         <hr>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
