--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -148,6 +148,13 @@
           Book: Advanced Penetration Testing: Chapter 1: Medical Records (In)Security <br><br>
           University Cyber Security Club Presentation: Bash Scripting <br><br>
         </p>
+        <h3>Day 14: Oct 23 2021</h3><br>
+        <p>
+          <a href="https://pwnoh.io/" target="_blank">BuckeyeCTF</a> <br><br>
+          University Cyber Security Club: HackTheBox: Intelligence <br><br>
+          <a href="https://tryhackme.com/room/walkinganapplication" target="_blank">Walking An Application </a>: TryHackMe <br><br>
+          <a href="https://tutorials.cyberaces.org/tutorials.html" target="_blank">Section 3: System Administration: Bash Scripting </a>: Sans CyberAces
+        </p>
         <hr>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
