--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -153,7 +153,8 @@
           <a href="https://pwnoh.io/" target="_blank">BuckeyeCTF</a> <br><br>
           University Cyber Security Club: HackTheBox: Intelligence <br><br>
           <a href="https://tryhackme.com/room/walkinganapplication" target="_blank">Walking An Application </a>: TryHackMe <br><br>
-          <a href="https://tutorials.cyberaces.org/tutorials.html" target="_blank">Section 3: System Administration: Bash Scripting </a>: Sans CyberAces
+          <a href="https://tutorials.cyberaces.org/tutorials.html" target="_blank">Section 3: System Administration: Bash Scripting </a>: Sans CyberAces <br><br>
+          <a href="https://www.youtube.com/watch?v=mQT38VR4boQ&t=6145s&ab_channel=JohnHammond" target="_blank">TryHackMe - Throwback - Attacking Windows Active Directory || Part One</a>: John Hammond <br><br>
         </p>
         <hr>
         <p>Copyright © 2021 Aditya Dindi</p>
