--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -194,6 +194,7 @@
           <a href="https://tryhackme.com/jr/authenticationbypass" target="_blank">Authentication Bypass</a> : TryHackMe <br><br>
           <a href="https://tryhackme.com/jr/idor" target="_blank">IDOR</a> : TryHackMe <br><br>
         </p>
+        <br><br>
         <h3>Day 18: Oct 27 2021</h3><br>
         <p>
           Hacking Book: Black Hat Python: Chapter 2 <br><br>
@@ -202,19 +203,21 @@
           <a href="https://www.blackhillsinfosec.com/services/cyber-range/" target="_blank">MetaCTF | Cyber Range </a>: Black Hills Information Security <br><br>
           <a href="https://infosecwriteups.com/beginners-ctf-guide-finding-hidden-data-in-images-e3be9e34ae0d" target="_blank">Beginners CTF Guide: Finding Hidden Data in Images</a> : Infosec Writeups <br><br>
         </p>
+        <br><br>
         <h3>Day 19: Oct 28 2021</h3><br>
         <p>
           <a href="https://www.youtube.com/watch?v=j8dGzaKZPgE&ab_channel=Seytonic" target="_blank">FBI Hacks rEvil Ransomware Gang</a> <br><br>
           <a href="https://tryhackme.com/room/fileinc" target="_blank">File Inclusion</a> : TryHackMe <br><br>
           Texas Cyber Summit (Volunteer)<br><br>
         </p>
+        <br><br>
         <h3>Day 20: Oct 29 2021</h3><br>
         <p>
           Texas Cyber Summit (Volunteer) <br><br>
-          KillerQueen CTF
+          <a href="https://2021.killerqueenctf.org/" target="_blank">KillerQueen CTF </a> <br><br>
           <a href="chrome-extension://efaidnbmnnnibpcajpcglclefindmkaj/viewer.html?pdfurl=https%3A%2F%2Fowasp.org%2Fwww-pdf-archive%2FPHPMagicTricks-TypeJuggling.pdf&chunk=true" target="_blank">PHP Magic Tricks: Type Juggling</a> : Chris Smith <br><br>
-
         </p>
+        <br><br>
         <hr>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
