--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -218,6 +218,11 @@
           <a href="chrome-extension://efaidnbmnnnibpcajpcglclefindmkaj/viewer.html?pdfurl=https%3A%2F%2Fowasp.org%2Fwww-pdf-archive%2FPHPMagicTricks-TypeJuggling.pdf&chunk=true" target="_blank">PHP Magic Tricks: Type Juggling</a> : Chris Smith <br><br>
         </p>
         <br><br>
+        <h3>Day 20: Oct 29 2021</h3><br>
+        <p>
+          Texas Cyber Summit (Volunteer) <br><br>
+          <a href="https://2021.killerqueenctf.org/" target="_blank">KillerQueen CTF </a> <br><br>
+        </p>
         <hr>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
