--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -27,6 +27,12 @@
           <li class="nav-item">
             <a class="nav-link" href="#week2">Week 2</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#week3">Week 3</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#week4">Week 4</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -159,6 +165,7 @@
           <a href="https://tutorials.cyberaces.org/tutorials.html" target="_blank">Section 3: System Administration: Bash Scripting </a>: Sans CyberAces <br><br>
         </p>
         <br><br>
+        <h2 id="week3">Week 3</h2><br><br>
         <h3>Day 14: Oct 23 2021</h3><br>
         <p>
           <a href="https://tryhackme.com/jr/contentdiscovery" target="_blank">Contect Discovery </a>: TryHackMe <br><br>
@@ -208,7 +215,6 @@
         <p>
           <a href="https://www.youtube.com/watch?v=j8dGzaKZPgE&ab_channel=Seytonic" target="_blank">FBI Hacks rEvil Ransomware Gang</a> <br><br>
           <a href="https://tryhackme.com/room/fileinc" target="_blank">File Inclusion</a> : TryHackMe <br><br>
-          Texas Cyber Summit (Volunteer)<br><br>
         </p>
         <br><br>
         <h3>Day 20: Oct 29 2021</h3><br>
@@ -218,11 +224,18 @@
           <a href="chrome-extension://efaidnbmnnnibpcajpcglclefindmkaj/viewer.html?pdfurl=https%3A%2F%2Fowasp.org%2Fwww-pdf-archive%2FPHPMagicTricks-TypeJuggling.pdf&chunk=true" target="_blank">PHP Magic Tricks: Type Juggling</a> : Chris Smith <br><br>
         </p>
         <br><br>
-        <h3>Day 20: Oct 29 2021</h3><br>
+        <h3>Day 21: Oct 29 2021</h3><br>
         <p>
           Texas Cyber Summit (Volunteer) <br><br>
           <a href="https://2021.killerqueenctf.org/" target="_blank">KillerQueen CTF </a> <br><br>
         </p>
+        <hr>
+        <h2 id="week4">Week 4</h2><br>
+        <h3>Day 22: Oct 30 2021</h3><br>
+        <p>
+          Texas Cyber Summit (Volunteer)<br><br>
+        </p>
+        <h3>Day 23: Oct 31 2021</h3><br>
         <hr>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
