--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -236,12 +236,23 @@
           Texas Cyber Summit (Volunteer)<br><br>
         </p>
         <h3>Day 23: Oct 31 2021</h3><br>
+        <p>
+          Blogs by Faiyaz Admad: <br><br>
+          <a href="https://faiyazhacks.medium.com/i-d-o-r-to-account-takeover-834371d2365a" target="_blank">IDOR to Account Takeover</a> <br><br>
+          <a href="https://faiyazhacks.medium.com/bugbounty-c-s-r-f-at-password-reset-page-93bd440cee61" target="_blank">BugBounty: CSRF at Password Reset Page</a> <br><br>
+          <a href="https://faiyazhacks.medium.com/how-i-found-xss-in-private-program-9cedcc7a84a" target="_blank">How I found XSS in Private Program</a> <br><br>
+          <a href="https://github.com/excitedcactus/Killerqueen-CTF-2021" target="_blank">KIllerQuuen CTF Writeups</a> : excitedcactus <br><br>
+          <a href="https://tryhackme.com/room/fileinc" target="_blank">File Inclusion</a> : TryHackMe <br><br>
+          <a href="https://overthewire.org/wargames/bandit" target="_blank">Bandit Levels: 17 - 20</a> : OverTheWire Wargames<br><br>
+          <a href="https://ozguralp.medium.com/how-to-start-bug-bounties-101-how-to-make-a-million-in-4-years-e15ee62d6f4" target="_blank">How to start Bug Bounties 101</a> : Ozgur Alp <br><br>
+          <a href="https://www.youtube.com/watch?v=nzAMZvEC_Xc" target="_blank">OSCP - Advice for the Exam</a> : Conda <br><br>
+          <a href="https://www.youtube.com/watch?v=esa3_7Tutj4&ab_channel=Sandra-Tech%26Lifestyle" target="_blank">Career Q&A (Cyber Security): How I Got My Job, What I do at work, Advice for Beginners in Cyber, etc</a> : Sandra-Tech & Lifestyle <br><br>
+        </p>
         <hr>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
     </div>
-    
-   </center>
+  </center>
    
     <!-- Optional JavaScript; choose one of the two! -->
 
