--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -243,12 +243,24 @@
           <a href="https://faiyazhacks.medium.com/i-d-o-r-to-account-takeover-834371d2365a" target="_blank">IDOR to Account Takeover</a> <br><br>
           <a href="https://faiyazhacks.medium.com/bugbounty-c-s-r-f-at-password-reset-page-93bd440cee61" target="_blank">BugBounty: CSRF at Password Reset Page</a> <br><br>
           <a href="https://faiyazhacks.medium.com/how-i-found-xss-in-private-program-9cedcc7a84a" target="_blank">How I found XSS in Private Program</a> <br><br>
-          <a href="https://github.com/excitedcactus/Killerqueen-CTF-2021" target="_blank">KIllerQuuen CTF Writeups</a> : excitedcactus <br><br>
+          <a href="https://github.com/excitedcactus/Killerqueen-CTF-2021" target="_blank">KillerQueen CTF Writeups</a> : excitedcactus <br><br>
           <a href="https://tryhackme.com/room/fileinc" target="_blank">File Inclusion</a> : TryHackMe <br><br>
           <a href="https://overthewire.org/wargames/bandit" target="_blank">Bandit Levels: 17 - 20</a> : OverTheWire Wargames<br><br>
           <a href="https://ozguralp.medium.com/how-to-start-bug-bounties-101-how-to-make-a-million-in-4-years-e15ee62d6f4" target="_blank">How to start Bug Bounties 101</a> : Ozgur Alp <br><br>
           <a href="https://www.youtube.com/watch?v=nzAMZvEC_Xc" target="_blank">OSCP - Advice for the Exam</a> : Conda <br><br>
           <a href="https://www.youtube.com/watch?v=esa3_7Tutj4&ab_channel=Sandra-Tech%26Lifestyle" target="_blank">Career Q&A (Cyber Security): How I Got My Job, What I do at work, Advice for Beginners in Cyber, etc</a> : Sandra-Tech & Lifestyle <br><br>
+        </p>
+        <h3>Day 23: Oct 31 2021</h3><br>
+        <p>
+          <a href="https://github.com/excitedcactus/Killerqueen-CTF-2021" target="_blank">KillerQueen CTF Writeups</a> : excitedcactus <br><br>
+          <a href="https://tryhackme.com/room/fileinc" target="_blank">File Inclusion</a> : TryHackMe <br><br>
+          <a href="https://tryhackme.com/games/koth" target="_blank">King Of The Hill</a> : TryHackMe <br><br>
+          <a href="https://www.blackhillsinfosec.com/services/cyber-range/" target="_blank">MetaCTF | Cyber Range </a>: Black Hills Information Security <br><br>
+          <a href="https://www.youtube.com/watch?v=xOHLniVJsJY&t=373s&ab_channel=CryptoCat" target="_blank">Binary Exploitation (Pwn) Challenge Walkthroughs - Killer Queen CTF 2021</a> : CryptoCat <br><br>
+          <a href="https://www.youtube.com/watch?v=zPce01Eotrk&t=2s" target="_blank">Penetration | UUTCTF</a> : Rahul Singh <br><br>
+          <a href="https://overthewire.org/wargames/bandit" target="_blank">Bandit Levels: 20 - 23</a> : OverTheWire Wargames<br><br>
+          <a href="https://www.youtube.com/watch?v=aUqes9QdLQ4&t=2474s&ab_channel=TalksatGoogle" target="_blank">My Adventures as the World’s Most Wanted Hacker | Kevin Mitnick | Talks at Google</a> : Talks at Google <br><br>
+          <a href="https://www.youtube.com/watch?v=bMnuXZ70YdU&ab_channel=MotasemHamdan" target="_blank">File Inclusion Vulnerability Explained | TryHackMe Junior Penetration Tester</a> : Motasem Hamdan <br><br>
         </p>
         <hr>
         <p>Copyright © 2021 Aditya Dindi</p>
