--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -250,7 +250,7 @@
           <a href="https://www.youtube.com/watch?v=nzAMZvEC_Xc" target="_blank">OSCP - Advice for the Exam</a> : Conda <br><br>
           <a href="https://www.youtube.com/watch?v=esa3_7Tutj4&ab_channel=Sandra-Tech%26Lifestyle" target="_blank">Career Q&A (Cyber Security): How I Got My Job, What I do at work, Advice for Beginners in Cyber, etc</a> : Sandra-Tech & Lifestyle <br><br>
         </p>
-        <h3>Day 23: Oct 31 2021</h3><br>
+        <h3>Day 24: Nov 1 2021</h3><br>
         <p>
           <a href="https://github.com/excitedcactus/Killerqueen-CTF-2021" target="_blank">KillerQueen CTF Writeups</a> : excitedcactus <br><br>
           <a href="https://tryhackme.com/room/fileinc" target="_blank">File Inclusion</a> : TryHackMe <br><br>
@@ -261,6 +261,18 @@
           <a href="https://overthewire.org/wargames/bandit" target="_blank">Bandit Levels: 20 - 23</a> : OverTheWire Wargames<br><br>
           <a href="https://www.youtube.com/watch?v=aUqes9QdLQ4&t=2474s&ab_channel=TalksatGoogle" target="_blank">My Adventures as the World’s Most Wanted Hacker | Kevin Mitnick | Talks at Google</a> : Talks at Google <br><br>
           <a href="https://www.youtube.com/watch?v=bMnuXZ70YdU&ab_channel=MotasemHamdan" target="_blank">File Inclusion Vulnerability Explained | TryHackMe Junior Penetration Tester</a> : Motasem Hamdan <br><br>
+        </p>
+        <h3>Day 25: Nov 2 2021</h3><br>
+        <p>
+          <a href="https://overthewire.org/wargames/bandit" target="_blank">Bandit Levels: 23 - 25</a> : OverTheWire Wargames<br><br>
+          <a href="https://www.youtube.com/watch?v=z1JY9U_JKXQ" target="_blank">NCL Summer Live - Linux Command Line - Sep 14 2021</a> : NationalCyberLeague <br><br>
+          <a href="https://www.youtube.com/watch?v=7dFuQC7RuRo&list=WL&index=28&ab_channel=NationalCyberLeague" target="_blank">NCL Summer Live - Linux Command Line Part 2 - Sep 30 2021</a> : NationalCyberLeague <br><br>
+          <a href="https://www.youtube.com/watch?v=ZjQ76eilt6E" target="_blank">How Companies Catch Ransomware Hackers</a> : Hak5 <br><br>
+          <a href="https://www.youtube.com/watch?v=5P18Ot0W9oA" target="_blank">[crackmes.one] - keygen.me</a> : Noobfin <br><br>
+          <a href="https://www.youtube.com/watch?v=fTGTnrgjuGA" target="_blank">Ghidra quickstart & tutorial: Solving a simple crackme</a> : stacksmashing <br><br>
+          <a href="https://overthewire.org/wargames/natas/" target="_blank">Natas: Levels 1 - 9</a>
+          <a href="https://www.youtube.com/watch?v=xOHLniVJsJY&t=373s&ab_channel=CryptoCat" target="_blank">Binary Exploitation (Pwn) Challenge Walkthroughs - Killer Queen CTF 2021</a> : CryptoCat <br><br>
+          <a href="https://www.udemy.com/course/computer-hacking-fundamentals/" target="_blank">Udemy: Fundamentals of Computer Hacking</a> : infySEC Global <br><br>
         </p>
         <hr>
         <p>Copyright © 2021 Aditya Dindi</p>
