--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -274,6 +274,13 @@
           <a href="https://www.youtube.com/watch?v=xOHLniVJsJY&t=373s&ab_channel=CryptoCat" target="_blank">Binary Exploitation (Pwn) Challenge Walkthroughs - Killer Queen CTF 2021</a> : CryptoCat <br><br>
           <a href="https://www.udemy.com/course/computer-hacking-fundamentals/" target="_blank">Udemy: Fundamentals of Computer Hacking</a> : infySEC Global <br><br>
         </p>
+        <h3>Day 26: Nov 3 2021</h3><br>
+        <p>
+          <a href="https://www.youtube.com/watch?v=uMT9pTq6UH4" target="_blank">Bug Bounty Series | Chapter 1</a> : Rahul Singh <br><br>
+          <a href="https://www.youtube.com/watch?v=eAqUVRO4QC0&t=130s" target="_blank">Bug Bounty Series | Chapter 2</a> : Rahul Singh <br><br>
+          <a href="https://www.youtube.com/watch?v=725MRVTf838&t=448s" target="_blank">7 Cybersecurity Analyst Skills to Learn Now</a> : Nicole Enesse <br><br>
+          <a href="https://noelatvitb.medium.com/the-sec-601-success-story-how-i-passed-it-with-bonus-resources-1463864e3e53" target="_blank">The Sec+ 601 Success Story: How I passed it (with Bonus Resources)</a> : Noel Varghese <br><br>
+        </p>
         <hr>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
