--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -281,6 +281,18 @@
           <a href="https://www.youtube.com/watch?v=725MRVTf838&t=448s" target="_blank">7 Cybersecurity Analyst Skills to Learn Now</a> : Nicole Enesse <br><br>
           <a href="https://noelatvitb.medium.com/the-sec-601-success-story-how-i-passed-it-with-bonus-resources-1463864e3e53" target="_blank">The Sec+ 601 Success Story: How I passed it (with Bonus Resources)</a> : Noel Varghese <br><br>
         </p>
+        <h3>Day 27: Nov 4 2021</h3><br>
+        <p>
+          <a href="https://tryhackme.com/jr/ssrfqi" target="_blank">SSRF</a> : TryHackMe <br><br>
+          <a href="https://www.youtube.com/watch?v=8C7ouESJyfM&ab_channel=LiveOverflow" target="_blank">Can Hackers Get Into Every Device</a> : LiveOverflow <br><br>
+          Hacking Book: Hacking: The Art of exploitation <br><br>
+          <a href="https://medium.com/@aashutoshchaudhary15/my-first-bug-bounty-b85c04fe202f" target="_blank">My First Bug Bounty</a> : Aashutoshchaudhary <br><br>
+          <a href="https://mrpentestguy.medium.com/how-i-found-a-command-injection-bug-80c2e1592aeb" target="_blank">How I found a Command injection bug</a> : mrpentestguy <br><br>
+          <a href="https://0xjin.medium.com/bug-bounty-my-remote-code-execution-da7bbd00925a" target="_blank">Bug Bounty: “My Remote Code Execution”</a> : 0xJin <br><br>
+          <a href="https://sushant-kamble.medium.com/how-i-found-command-injection-via-obsolete-phpthumb-p1-vulnerability-e4811248ce12" target="_blank">How I found Command Injection via Obsolete PHPThumb</a> : Sushant Kamble<br><br>
+          Attended USC Election Cybersecurity Initiative Workshop <br><br>
+          Attended Cyber Security CTF Team meeting <br><br>
+        </p>
         <hr>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
