--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -250,6 +250,7 @@
           <a href="https://www.youtube.com/watch?v=nzAMZvEC_Xc" target="_blank">OSCP - Advice for the Exam</a> : Conda <br><br>
           <a href="https://www.youtube.com/watch?v=esa3_7Tutj4&ab_channel=Sandra-Tech%26Lifestyle" target="_blank">Career Q&A (Cyber Security): How I Got My Job, What I do at work, Advice for Beginners in Cyber, etc</a> : Sandra-Tech & Lifestyle <br><br>
         </p>
+        <br><br>
         <h3>Day 24: Nov 1 2021</h3><br>
         <p>
           <a href="https://github.com/excitedcactus/Killerqueen-CTF-2021" target="_blank">KillerQueen CTF Writeups</a> : excitedcactus <br><br>
@@ -262,6 +263,7 @@
           <a href="https://www.youtube.com/watch?v=aUqes9QdLQ4&t=2474s&ab_channel=TalksatGoogle" target="_blank">My Adventures as the World’s Most Wanted Hacker | Kevin Mitnick | Talks at Google</a> : Talks at Google <br><br>
           <a href="https://www.youtube.com/watch?v=bMnuXZ70YdU&ab_channel=MotasemHamdan" target="_blank">File Inclusion Vulnerability Explained | TryHackMe Junior Penetration Tester</a> : Motasem Hamdan <br><br>
         </p>
+        <br><br>
         <h3>Day 25: Nov 2 2021</h3><br>
         <p>
           <a href="https://overthewire.org/wargames/bandit" target="_blank">Bandit Levels: 23 - 25</a> : OverTheWire Wargames<br><br>
@@ -274,6 +276,7 @@
           <a href="https://www.youtube.com/watch?v=xOHLniVJsJY&t=373s&ab_channel=CryptoCat" target="_blank">Binary Exploitation (Pwn) Challenge Walkthroughs - Killer Queen CTF 2021</a> : CryptoCat <br><br>
           <a href="https://www.udemy.com/course/computer-hacking-fundamentals/" target="_blank">Udemy: Fundamentals of Computer Hacking</a> : infySEC Global <br><br>
         </p>
+        <br><br>
         <h3>Day 26: Nov 3 2021</h3><br>
         <p>
           <a href="https://www.youtube.com/watch?v=uMT9pTq6UH4" target="_blank">Bug Bounty Series | Chapter 1</a> : Rahul Singh <br><br>
@@ -281,6 +284,7 @@
           <a href="https://www.youtube.com/watch?v=725MRVTf838&t=448s" target="_blank">7 Cybersecurity Analyst Skills to Learn Now</a> : Nicole Enesse <br><br>
           <a href="https://noelatvitb.medium.com/the-sec-601-success-story-how-i-passed-it-with-bonus-resources-1463864e3e53" target="_blank">The Sec+ 601 Success Story: How I passed it (with Bonus Resources)</a> : Noel Varghese <br><br>
         </p>
+        <br><br>
         <h3>Day 27: Nov 4 2021</h3><br>
         <p>
           <a href="https://tryhackme.com/jr/ssrfqi" target="_blank">SSRF</a> : TryHackMe <br><br>
@@ -293,6 +297,9 @@
           Attended USC Election Cybersecurity Initiative Workshop <br><br>
           Attended Cyber Security CTF Team meeting <br><br>
         </p>
+        <h3>Day 28: Nov 5 2021</h3><br>
+        <p>Breakday</p>
+        <br><br>
         <hr>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
