--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -272,7 +272,7 @@
           <a href="https://www.youtube.com/watch?v=ZjQ76eilt6E" target="_blank">How Companies Catch Ransomware Hackers</a> : Hak5 <br><br>
           <a href="https://www.youtube.com/watch?v=5P18Ot0W9oA" target="_blank">[crackmes.one] - keygen.me</a> : Noobfin <br><br>
           <a href="https://www.youtube.com/watch?v=fTGTnrgjuGA" target="_blank">Ghidra quickstart & tutorial: Solving a simple crackme</a> : stacksmashing <br><br>
-          <a href="https://overthewire.org/wargames/natas/" target="_blank">Natas: Levels 1 - 9</a>
+          <a href="https://overthewire.org/wargames/natas/" target="_blank">Natas: Levels 1 - 9</a> : OverTheWire Wargames <br><br>
           <a href="https://www.youtube.com/watch?v=xOHLniVJsJY&t=373s&ab_channel=CryptoCat" target="_blank">Binary Exploitation (Pwn) Challenge Walkthroughs - Killer Queen CTF 2021</a> : CryptoCat <br><br>
           <a href="https://www.udemy.com/course/computer-hacking-fundamentals/" target="_blank">Udemy: Fundamentals of Computer Hacking</a> : infySEC Global <br><br>
         </p>
@@ -300,6 +300,15 @@
         <h3>Day 28: Nov 5 2021</h3><br>
         <p>Breakday</p>
         <br><br>
+        <h3>Day 29: Nov 6 2021</h3><br>
+        <p>
+          Hacking Book: Black Hat Python <br><br>
+          University Cyber Security Club meeting <br><br>
+          <a href="https://damctf.xyz/" target="_blank">DamCTF</a> <br><br>
+          <a href="https://overthewire.org/wargames/natas/" target="_blank">Natas: Levels 9 - 12</a> : OverTheWire Wargames <br><br>
+          <a href="Shell Scripting Tutorial: How to Create Shell Script in Linux/Unix (guru99.com)" target="_blank">Shell Scripting Tutorial: How to Create Shell Script in Linux/Unix</a> : Guru99 <br><br>
+
+        </p>
         <hr>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
