--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -307,7 +307,9 @@
           <a href="https://damctf.xyz/" target="_blank">DamCTF</a> <br><br>
           <a href="https://overthewire.org/wargames/natas/" target="_blank">Natas: Levels 9 - 12</a> : OverTheWire Wargames <br><br>
           <a href="Shell Scripting Tutorial: How to Create Shell Script in Linux/Unix (guru99.com)" target="_blank">Shell Scripting Tutorial: How to Create Shell Script in Linux/Unix</a> : Guru99 <br><br>
-
+          <a href="https://tryhackme.com/jr/xssgi" target="_blank">Cross-site Scripting</a> : TryHackMe <br><br>
+          <a href="https://medium.com/@gulprit_singh/account-takeover-through-idor-2e4a7882c334" target="_blank">Account Takeover Through IDOR</a> : Gulprit Singh <br><br>
+          <a href="https://sapt.medium.com/bypassing-403-protection-to-get-pagespeed-admin-access-822fab64c0b3" target="_blank">Bypassing 403 Protection To Get Pagespeed Admin Access</a> : Prajit Sindhakar <br><br>
         </p>
         <hr>
         <p>Copyright © 2021 Aditya Dindi</p>
