--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -311,6 +311,16 @@
           <a href="https://medium.com/@gulprit_singh/account-takeover-through-idor-2e4a7882c334" target="_blank">Account Takeover Through IDOR</a> : Gulprit Singh <br><br>
           <a href="https://sapt.medium.com/bypassing-403-protection-to-get-pagespeed-admin-access-822fab64c0b3" target="_blank">Bypassing 403 Protection To Get Pagespeed Admin Access</a> : Prajit Sindhakar <br><br>
         </p>
+        <h3>Day 30: Nov 7 2021</h3><br>
+        <p>
+          Hacking Book: Hacking: The Art of exploitation <br><br>
+          <a href="https://tryhackme.com/jr/xssgi" target="_blank">Cross-site Scripting</a> : TryHackMe <br><br>
+          <a href="https://damctf.xyz/" target="_blank">DamCTF</a> <br><br>
+          <a href="https://www.youtube.com/watch?v=TrWw6vrOuLI&ab_channel=CryptoCat" target="_blank">Web Challenges - HTB x Synack RedTeamFive Capture The Flag (CTF) 2021</a> : CryptoCat <br><br>
+          University Cyber Security Meeting: Security+ Study group <br><br>
+          <a href="https://damctf.xyz/" target="_blank">DamCTF</a> <br><br>
+          <a href="https://www.youtube.com/watch?v=m1N10HN1G2M" target="_blank">How I Learned How to Hack: CTF Edition | How to Learn How to Hack 101/Best Tips to Learn How to Hack</a> : Sandra-Tech & Lifestyle <br><br>
+        </p>
         <hr>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
