--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -320,6 +320,7 @@
           University Cyber Security Meeting: Security+ Study group <br><br>
           <a href="https://damctf.xyz/" target="_blank">DamCTF</a> <br><br>
           <a href="https://www.youtube.com/watch?v=m1N10HN1G2M" target="_blank">How I Learned How to Hack: CTF Edition | How to Learn How to Hack 101/Best Tips to Learn How to Hack</a> : Sandra-Tech & Lifestyle <br><br>
+          <a href="https://www.youtube.com/watch?v=mQT38VR4boQ&t=6145s&ab_channel=JohnHammond" target="_blank">TryHackMe - Throwback - Attacking Windows Active Directory || Part One</a>: John Hammond <br><br>
         </p>
         <hr>
         <p>Copyright © 2021 Aditya Dindi</p>
