--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -353,6 +353,7 @@
           <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>
           <a href="https://www.hackingloops.com/sql-injection-cheat-sheet/">The Ultimate SQL Injection Cheat Sheet</a> : Hackingloops.com <br><br>
           <a href="https://www.youtube.com/watch?v=1IBuV6_Ol28&t=1534s&ab_channel=CryptoCat">Wargames: OverTheWire 3.1 - Natas (Part One Walkthrough)</a> : CryptoCat <br><br>
+          <a href="https://www.youtube.com/watch?v=9nuAjYRbITQ&list=PLCu2V3Hx2fDDunICSr08_oVj2Z8-_kscy&index=4&t=3790s&ab_channel=Nerd%27slesson" target="_blank">Computer Architecture Complete Couse Part 1</a> : Princeton University <br><br>
         </p>
         <hr>
         <p>Copyright © 2021 Aditya Dindi</p>
