--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -46,7 +46,7 @@
       <div class="des">
         <img src="/img/pyrus.jpg" class="img-fluid round"> <br><br>
         <h1>Daily</h1> <br><br>
-        <h1 id="tryhackme" style="color:DodgerBlue">10 Weeks of Hacking Challenge</h1><br>
+        <h1 id="tryhackme" style="color:DodgerBlue">100 Days/14 Weeks of Hacking Challenge</h1><br>
         <hr>
         <h2 id="week1">Week 1</h2> <br><br><br>
         <h3>Day 1: Oct 10 2021</h3><br>
@@ -300,6 +300,7 @@
           Attended USC Election Cybersecurity Initiative Workshop <br><br>
           Attended Cyber Security CTF Team meeting <br><br>
         </p>
+        <br><br>
         <h3>Day 28: Nov 5 2021</h3><br>
         <p>Breakday</p>
         <br><br>
@@ -314,6 +315,7 @@
           <a href="https://medium.com/@gulprit_singh/account-takeover-through-idor-2e4a7882c334" target="_blank">Account Takeover Through IDOR</a> : Gulprit Singh <br><br>
           <a href="https://sapt.medium.com/bypassing-403-protection-to-get-pagespeed-admin-access-822fab64c0b3" target="_blank">Bypassing 403 Protection To Get Pagespeed Admin Access</a> : Prajit Sindhakar <br><br>
         </p>
+        <br><br>
         <h3>Day 30: Nov 7 2021</h3><br>
         <p>
           Hacking Book: Hacking: The Art of exploitation <br><br>
@@ -324,6 +326,7 @@
           <a href="https://www.youtube.com/watch?v=m1N10HN1G2M" target="_blank">How I Learned How to Hack: CTF Edition | How to Learn How to Hack 101/Best Tips to Learn How to Hack</a> : Sandra-Tech & Lifestyle <br><br>
           <a href="https://www.youtube.com/watch?v=mQT38VR4boQ&t=6145s&ab_channel=JohnHammond" target="_blank">TryHackMe - Throwback - Attacking Windows Active Directory || Part One</a>: John Hammond <br><br>
         </p>
+        <br><br>
         <h3>Day 31: Nov 8 2021</h3><br>
         <p>
           <a href="https://tryhackme.com/jr/oscommandinjection" target="_blank">Command Injection</a> : TryHackMe <br><br>
@@ -354,6 +357,23 @@
           <a href="https://www.hackingloops.com/sql-injection-cheat-sheet/">The Ultimate SQL Injection Cheat Sheet</a> : Hackingloops.com <br><br>
           <a href="https://www.youtube.com/watch?v=1IBuV6_Ol28&t=1534s&ab_channel=CryptoCat">Wargames: OverTheWire 3.1 - Natas (Part One Walkthrough)</a> : CryptoCat <br><br>
           <a href="https://www.youtube.com/watch?v=9nuAjYRbITQ&list=PLCu2V3Hx2fDDunICSr08_oVj2Z8-_kscy&index=4&t=3790s&ab_channel=Nerd%27slesson" target="_blank">Computer Architecture Complete Couse Part 1</a> : Princeton University <br><br>
+        </p>
+        <br><br>
+        <h3>Day 32: Nov 9 2021</h3><br>
+        <p>
+          <a href="https://gowtham-naidu.medium.com/500-bug-sensitive-data-exposure-to-broken-access-control-leads-how-i-able-to-take-over-any-33658f16e265" target="_blank">500$ Bug: Sensitive Data Exposure to Broken Access Control leads, How I able to take over any account of India’s Biggest College Ever</a> : Gowtham Naidu <br><br>
+          <a href="https://infosecwriteups.com/into-the-art-of-binary-exploitation-0x000001-stack-based-overflow-50fe48d58f10">Into the art of Binary Exploitation 0x000001 [Stack-Based Overflow]</a> : 7h3h4ckv157 - Infosec Writeups <br><br>
+          <a href="https://monish-basaniwal.medium.com/how-i-found-my-first-subdomain-takeover-vulnerability-b7d5c17b61fd">How I found my first Subdomain Takeover vulnerability</a> : Monish Basaniwal <br><br>
+          <a href="https://rishabhrai02.medium.com/nctf-cyvit-2021-0x3-602a8ef303d1">nCTF | CyVIT 2021 0x3</a> : Rishabh Rai <br><br>
+          <a href="https://rishabhrai02.medium.com/review-pts-ine-b665437c9502">Penetration Testing Student (PTS) Course Review | INE</a> : Rishabh Rai <br><br>
+          <a href="https://aravind07.medium.com/this-is-how-i-bypassed-the-payment-gateway-got-subscription-for-free-year-3c6f897a537">THIS IS HOW I BYPASSED THE PAYMENT GATEWAY & GOT SUBSCRIPTION FOR FREE/YEAR</a> : Gnana Aravind <br><br>
+          <a href="https://www.youtube.com/watch?v=9nuAjYRbITQ&list=PLCu2V3Hx2fDDunICSr08_oVj2Z8-_kscy&index=4&t=3790s&ab_channel=Nerd%27slesson">Computer Architecture Complete Course Part 1</a> : Princeton University <br><br>
+          <a href="https://steflan-security.com/tryhackme-relevant-walkthrough/">TryHackMe – Relevant Walkthrough</a> : Stefano Lanaro <br><br>
+          <a href="https://www.aldeid.com/wiki/TryHackMe-Relevant">TryHackMe-Relevant</a> : aldeid <br><br>
+          <a href="https://www.youtube.com/watch?v=b6wcaXDXFQM&ab_channel=MotasemHamdan">Demonstrating Black Box Penetration Testing - TryHackMe Relevant</a> : Motassem Hamdan <br><br>
+          <a href="https://medium.com/cybersecpadawan/relevant-walk-through-on-tryhackme-f7dedfcb00dc">Relevant Walk-through</a> : Joe Helle <br><br>
+          Hacking Book: Black Hat Python <br><br>
+          <a href="https://tryhackme.com/room/relevant">Relevant</a> : TryHackMe <br><br>
         </p>
         <hr>
         <p>Copyright © 2021 Aditya Dindi</p>
