--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -359,7 +359,7 @@
           <a href="https://www.youtube.com/watch?v=9nuAjYRbITQ&list=PLCu2V3Hx2fDDunICSr08_oVj2Z8-_kscy&index=4&t=3790s&ab_channel=Nerd%27slesson" target="_blank">Computer Architecture Complete Couse Part 1</a> : Princeton University <br><br>
         </p>
         <br><br>
-        <h3>Day 32: Nov 9 2021</h3><br>
+        <h3>Day 33: Nov 10 2021</h3><br>
         <p>
           <a href="https://gowtham-naidu.medium.com/500-bug-sensitive-data-exposure-to-broken-access-control-leads-how-i-able-to-take-over-any-33658f16e265" target="_blank">500$ Bug: Sensitive Data Exposure to Broken Access Control leads, How I able to take over any account of India’s Biggest College Ever</a> : Gowtham Naidu <br><br>
           <a href="https://infosecwriteups.com/into-the-art-of-binary-exploitation-0x000001-stack-based-overflow-50fe48d58f10">Into the art of Binary Exploitation 0x000001 [Stack-Based Overflow]</a> : 7h3h4ckv157 - Infosec Writeups <br><br>
@@ -375,6 +375,23 @@
           Hacking Book: Black Hat Python <br><br>
           <a href="https://tryhackme.com/room/relevant">Relevant</a> : TryHackMe <br><br>
         </p>
+        <br><br>
+        <h3>Day 34: Nov 11 2021</h3><br>
+        <p>
+        University Cyber Security Club Meeting <br><br>
+        Hacking Book: Hacking: The Art of exploitation <br><br>
+          <a href="https://medium.com/@abdo-ali/how-i-found-my-first-bug-open-redirect-to-xss-9481e8354de7">How I found my first bug (open redirect to XSS) </a> : Abdo-ali <br><br>
+          <a href="https://medium.com/@mamunwhh/how-i-got-500-with-open-redirect-48fd80c82631">How I got $500 with Open redirect</a> : Khan Mamun <br><br>
+          <a href="https://n7ruzn.medium.com/web-application-penetration-testing-299a6548201a">Web Application Penetration Testing</a> : The Neuro Divergent Hacker <br><br>
+          <a href="https://medium.com/@bababounty99/never-give-up-story-of-hacking-dutch-government-and-earning-that-swag-b518cca81c78">Never Give Up — Story of Hacking Dutch Government and Earning that Dutch Swag.</a> : BabaBounty <br><br>
+          <a href="https://medium.com/@leaena.2809/login-bypass-with-response-manipulation-due-to-no-session-token-expiration-ea6da8d52a9b">Login Bypass due to no Session Token Expiration</a> : Srinithi Puvaneshwari <br><br>
+          <a href="https://medium.com/@behnam.yazdanpanah/how-i-was-able-to-use-service-like-netflix-for-free-7ef1535fbb46">How I was able to use service like Netflix for free</a> : Behnam Yazdanpanah <br><br>
+          <a href="https://medium.com/@behnam.yazdanpanah/chaining-bugs-from-self-xss-to-account-takeover-82d572136bdf">Chaining bugs from self XSS to account takeover</a> : Behnam Yazdanpanah <br><br>
+          <a href="https://www.youtube.com/watch?v=mycVSMyShk8&list=WL&index=33&ab_channel=AndroidAuthority">What is a kernel - Gary Explains</a> : Android Authority <br><br>
+          <a href="https://tryhackme.com/room/ultratech1">Ultra Tech</a> : TryHackMe <br><br>
+        </p>
+        <h3>Day 35: Nov 12 2021</h3><br>
+        <p>Break Day</p>
         <hr>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
