--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -392,6 +392,20 @@
         </p>
         <h3>Day 35: Nov 12 2021</h3><br>
         <p>Break Day</p>
+        <h3>Day 36: Nov 13 2021</h3><br>
+        <p>
+          Hacking Book: Black Hat Python <br><br>
+          <a href="https://ctf.intentsummit.org/">IntentCTF</a> <br><br>
+          <a href="https://tryhackme.com/jr/sqlinjectionlm">SQL Injection</a> : TryHackMe <br><br>
+          <a href="https://charan19.medium.com/my-first-bug-14cf61ce9db5">My First Bug!</a> : Sai Charan <br><br>
+          <a href="https://medium.com/@fcwdbrqmr/400-bounty-again-using-google-dorks-6dc8e438f017">400$ Bounty again using Google Dorks</a> : Haris M <br><br>
+          <a href="https://medium.com/@fcwdbrqmr/5min-400-using-google-dork-1df6bbe0f9fc">5min 400$ using Google Dork</a> : Haris M <br><br>
+          <a href="https://medium.com/@gandhim373/how-i-found-reflected-xss-on-forgot-password-page-f33e474628bb">How I Found Reflected XSS on Forgot Password Page</a> Mayank Gandhi <br><br>
+          <a href="https://medium.com/@gandhim373/new-way-to-find-html-injection-get-easy-bounty-65fdd319d688">#3 New Ways to Find HTML Injection & Get Easy Bounty !!!</a> : Mayank Gandhi <br><br>
+          <a href="https://medium.com/@gandhim373/4-server-side-template-injection-easily-found-d7ca345aa55f">#4 Server Side Template Injection (Easily Found)</a> : Mayank Gandhi <br><br>
+          <a href="https://medium.com/@stark303/how-i-got-my-first-bounty-300-how-i-got-into-bug-bounty-7d6497b3ce81">How I got my first bounty $300 & How I got into Bug Bounty</a> : stark303 <br><br>
+          <a href="https://medium.com/@tbw_lucilu/my-hacking-journey-and-how-i-got-my-first-bug-after-50-duplicates-a1ec22c365fb">My hacking journey and How I got my first valid bug after 50+ duplicates?</a> : tbw_lucilu <br><br>
+        </p>
         <hr>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
