--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -36,6 +36,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#week5">Week 5</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#week6">Week 6</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -406,7 +409,29 @@
           <a href="https://medium.com/@stark303/how-i-got-my-first-bounty-300-how-i-got-into-bug-bounty-7d6497b3ce81">How I got my first bounty $300 & How I got into Bug Bounty</a> : stark303 <br><br>
           <a href="https://medium.com/@tbw_lucilu/my-hacking-journey-and-how-i-got-my-first-bug-after-50-duplicates-a1ec22c365fb">My hacking journey and How I got my first valid bug after 50+ duplicates?</a> : tbw_lucilu <br><br>
         </p>
-        <hr>
+        <h3>Day 37: Nov 14 2021</h3><br>
+        <p>
+          <a href="https://goktugkaya.medium.com/how-i-found-reflected-xss-at-microsoft-28f80d18cec">How i found Reflected XSS at Microsoft ?</a> : Göktuğ Kaya <br><br>
+          <a href="https://gonzx.medium.com/how-i-found-open-redirect-on-hashnode-com-5f3e9ecb8dc6">How I found Open Redirect on Hashnode.com</a> : Jefferson Gonzales <br><br>
+          <a href="https://sapt.medium.com/stored-xss-non-privileged-user-to-anyone-using-qr-code-dfeb0bd98a5">Stored XSS: Non-Privileged User to Anyone Using QR Code</a> : Prajit Sindhkar <br><br>
+          <a href="https://sapt.medium.com/bypassing-403-protection-to-get-pagespeed-admin-access-822fab64c0b3">Bypassing 403 Protection To Get Pagespeed Admin Access</a> : Prajit Sindhkar <br><br>
+          <a href="https://sapt.medium.com/apple-hall-of-fame-for-a-small-misconfiguration-unauth-cache-purging-faf81b19419b">Apple Hall Of Fame for a Small Misconfiguration || Unauth Cache Purging</a> : Prajit Sindhkar <br><br>
+          <a href="https://sapt.medium.com/breaking-reset-password-logic-to-get-account-takeover-without-user-interaction-f241fefe12e7">Breaking Reset Password Logic To Get Account Takeover Without User Interaction</a> : Prajit Sindhkar <br><br>
+          <a href="https://sapt.medium.com/my-first-bounty-on-a-simple-bug-212e8c4ea077">My First Bounty on a Simple Bug</a> : Prajit Sindhkar <br><br>
+        </p>
+        <h2 id="week6">Week 6</h2><br>
+        <h3>Day 38: Nov 15 2021</h3><br>
+        <p>
+          <a href="https://medium.com/@tameemkhalid786/host-header-injection-on-password-reset-functionality-an-easy-p2-5c6263c2e3d4">Host Header Injection On Password Reset Functionality An Easy #P2</a> Tameem Khalid <br><br>
+          <a href="https://rizwansiddiqu1.medium.com/super-admin-panel-without-credentials-c2022a23bb35">Super Admin panel without Credentials 😎</a> : Rizwan Siddiqui <br><br>
+          <a href="https://stevemats.medium.com/dont-tell-anyone-here-s-a-quick-way-to-get-your-first-wordpress-bounty-e861a36bf78">Don’t tell anyone: Here’s a Way to Get Your First WordPress bounty</a> : Steve Matindi <br><br>
+          <a href="https://aravind07.medium.com/my-first-hall-of-fame-d575cb919801">My first Hall of Fame 🤩</a> : Gnana Aravind <br><br>
+          <a href="https://0xparth.medium.com/oauth-misconfig-account-takeover-df68afe3245b">OAuth Misconfig → Account Takeover</a> : Parth Shukla <br><br>
+          <a href="https://sapt.medium.com/sqli-on-a-bugcrowd-private-program-17858b57ec61">SQLI on a Bugcrowd Private Program</a> : Prajit Sindhkar <br><br>
+          <a href="https://cyberskyline.com/events/crowdstrike-cyber-challenge">CrowdStrike Cyber Challenge </a> <br><br>
+          <a href="https://tryhackme.com/room/ultratech1">Ultratech</a>: TryHackMe <br><br>
+          <a href="https://www.udemy.com/course/computer-hacking-fundamentals/" target="_blank">Udemy: Fundamentals of Computer Hacking</a> : infySEC Global <br><br>
+        </p>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
     </div>
