--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -393,8 +393,10 @@
           <a href="https://www.youtube.com/watch?v=mycVSMyShk8&list=WL&index=33&ab_channel=AndroidAuthority">What is a kernel - Gary Explains</a> : Android Authority <br><br>
           <a href="https://tryhackme.com/room/ultratech1">Ultra Tech</a> : TryHackMe <br><br>
         </p>
+        <br><br>
         <h3>Day 35: Nov 12 2021</h3><br>
         <p>Break Day</p>
+        <br><br>
         <h3>Day 36: Nov 13 2021</h3><br>
         <p>
           Hacking Book: Black Hat Python <br><br>
@@ -409,6 +411,7 @@
           <a href="https://medium.com/@stark303/how-i-got-my-first-bounty-300-how-i-got-into-bug-bounty-7d6497b3ce81">How I got my first bounty $300 & How I got into Bug Bounty</a> : stark303 <br><br>
           <a href="https://medium.com/@tbw_lucilu/my-hacking-journey-and-how-i-got-my-first-bug-after-50-duplicates-a1ec22c365fb">My hacking journey and How I got my first valid bug after 50+ duplicates?</a> : tbw_lucilu <br><br>
         </p>
+        <br><br>
         <h3>Day 37: Nov 14 2021</h3><br>
         <p>
           <a href="https://goktugkaya.medium.com/how-i-found-reflected-xss-at-microsoft-28f80d18cec">How i found Reflected XSS at Microsoft ?</a> : Göktuğ Kaya <br><br>
@@ -419,6 +422,7 @@
           <a href="https://sapt.medium.com/breaking-reset-password-logic-to-get-account-takeover-without-user-interaction-f241fefe12e7">Breaking Reset Password Logic To Get Account Takeover Without User Interaction</a> : Prajit Sindhkar <br><br>
           <a href="https://sapt.medium.com/my-first-bounty-on-a-simple-bug-212e8c4ea077">My First Bounty on a Simple Bug</a> : Prajit Sindhkar <br><br>
         </p>
+        <br><br>
         <h2 id="week6">Week 6</h2><br>
         <h3>Day 38: Nov 15 2021</h3><br>
         <p>
@@ -431,6 +435,52 @@
           <a href="https://cyberskyline.com/events/crowdstrike-cyber-challenge">CrowdStrike Cyber Challenge </a> <br><br>
           <a href="https://tryhackme.com/room/ultratech1">Ultratech</a>: TryHackMe <br><br>
           <a href="https://www.udemy.com/course/computer-hacking-fundamentals/" target="_blank">Udemy: Fundamentals of Computer Hacking</a> : infySEC Global <br><br>
+          <a href="https://www.youtube.com/watch?v=nsnn0tFu3To&ab_channel=RahulSingh">Door (un)locked | Intent CTF</a> : Rahul Singh <br><br>
+        </p>
+        <br><br>
+        <h3>Day 39: Nov 16 2021</h3><br>
+        <p>
+          <a href="https://fardeen-ahmed.medium.com/a-small-change-and-things-go-in-your-hand-story-of-a-250-bounty-5ddc43c31463">A small change, and things go in your hand : Story of a $250 bounty</a> : Fardeen Ahmed <br><br>
+          <a href="https://medium.com/@faeeqjalali/account-takeover-by-tampering-the-signup-verification-token-9abadc5e4dbf">Account takeover by tampering the Signup verification token .</a> : Faeeq Jalali <br><br>
+          <a href="https://xelkomy.medium.com/how-i-was-able-to-get-1000-bounty-from-a-ds-store-file-dc2b7175e92c">How I was able to get 1000$ bounty from a ds-store file?</a> : Khaled Mohamed <br><br>
+          <a href="https://sm4rty.medium.com/hunting-for-bugs-in-sign-up-register-feature-2021-c47035481212">Hunting for Bugs in Registration/Sign Up Feature -2021</a> : Sm4rty <br><br>
+          <a href="https://dhrruvin.medium.com/how-i-got-my-first-swag-9db3678c395">How I got My First Swag</a> : Dhrruvin <br><br>
+          <a href="https://haox-hapot.medium.com/the-ways-of-finding-subdomains-in-minutes-haox-4be5e20d902b">The ways of finding subdomains in minutes</a> : Haox <br><br>
+          <a href="https://networkingsec.com/how-to-start-bug-bounty-hunting-94b1ff3dda27">How to Start Bug Bounty Hunting</a> : Anton (therceman) <br><br>
+          <a href="https://medium.com/@nayakdevraj010/my-first-bug-reflected-xss-3f4ba2ba1cc6">My First Bug-Reflected XSS</a> : Devraj Nayak <br><br>
+          <a href="https://dzakir.medium.com/how-to-get-500-via-source-code-exposed-16fca67af465">How I get $500 via Source Code Exposed</a> : Abdullah Mudzakir <br><br>
+          <a href="https://noob3xploiter.medium.com/sql-injection-in-harvard-subdomain-be67a5dbf664">SQL injection in harvard subdomain</a> : Brandon Roldan <br><br>
+          <a href="https://medium.com/@gguzelkokar.mdbf15/huge-impact-server-side-request-forgery-in-production-app-20bf0cc5731">Server Side Request Forgery with huge impact in production application</a> : Gökhan Güzelkokar <br><br>
+          <a href="https://www.youtube.com/watch?v=MHYqql9ZdeY&ab_channel=RahulSingh">Career | Intent CTF | Web Category</a> : Rahul Singh <br><br>
+          Hacking Book: Hacking: The Art of exploitation <br></br>
+          <a href="https://tryhackme.com/room/adventofcyber3">Advent of Cyber 3</a> : TryHackMe <br><br>
+          <a href="https://tryhackme.com/room/tokyoghoul666">Tokyo Ghoul</a> : TryHackMe <br><br>
+          <a href="https://cyberskyline.com/events/crowdstrike-cyber-challenge">CrowdStrike Cyber Challenge </a> <br><br>
+        </p>
+        <br><br>
+        <h3>Day 40: Nov 17 2021</h3><br>
+        <p>
+          <a href="https://ozguralp.medium.com/how-to-start-bug-bounties-101-how-to-make-a-million-in-4-years-e15ee62d6f4" target="_blank">How to start Bug Bounties 101</a> : Ozgur Alp <br><br>
+          <a href="https://piyushshuklabug.medium.com/how-i-found-p1-bug-due-to-sensitive-data-exposer-and-earn-99ebcb342bcd">How I Found P1 bug Due to Sensitive data exposure And Earn $$$$</a> : Piyush Shukla <br><br>
+          <a href="https://eslam3kl.medium.com/how-to-write-simple-script-to-automate-finding-bugs-438c121b61cf">How to write simple script to automate finding bugs</a> : Eslam Akl <br><br>
+          <a href="https://darshan-jogi.medium.com/account-takeover-which-companies-dont-accept-74e8cf22d873">Account Takeover! Which companies don't accept 😞</a> : Darshan Jogi <br><br>
+          <a href="https://darshan-jogi.medium.com/simple-parameter-tampering-account-takeover-3fec3cb51eb6">Simple Parameter Tampering → Account Takeover</a> : Darshan Jogi <br><br>
+          <a href="https://faiyazhacks.medium.com/unrestricted-file-uploads-e361639913b1">UNRESTRICTED FILE UPLOADS</a> : Faiyaz Ahmad <br><br>
+          <a href="https://faiyazhacks.medium.com/how-i-found-xss-in-private-program-9cedcc7a84a">HOW I FOUND XSS IN PRIVATE PROGRAM</a> : Faiyaz Ahmad <br><br>
+          <a href="https://faiyazhacks.medium.com/how-i-got-my-name-in-bbcs-hall-of-fame-54f7898521ad">HOW I GOT MY NAME IN BBC’S HALL OF FAME</a> : Faiyaz Ahmad <br><br>
+          <a href="https://faiyazhacks.medium.com/first-bug-bounty-account-takeover-3b2c4ba9e091">First Bug Bounty: Account Takeover</a> : Faiyaz Ahmad <br><br>
+          <a href="https://www.youtube.com/watch?v=HtNKhBWBvts&ab_channel=JohnHammond">Examining Variables in GDB | learn gdb [33] picoCTF 2018</a> : John Hammond <br><br>
+          University Cyber Security Meeting: Capabilities and Limitations of Endpoint Security Products <br><br>
+          <a href="https://balsnctf.com/">Signed up for Balsn CTF</a> <br><br>
+          <a href="https://www.youtube.com/watch?v=krp0qCOAnFE&list=PL1H1sBF1VAKWM3wMCn6H5Ql6OrgIivt2V&index=12&ab_channel=JohnHammond">Python Web Hacking: SQL Injection | Natas: OverTheWire (Level 14)</a> : John Hammond <br><br>
+          <a href="https://axcheron.github.io/writeups/otw/natas/#natas-15-solution">[OTW] Write-up for the Natas Wargame</a> : BreakInSecurity <br><br>
+          <a href="https://overthewire.org/wargames/natas/" target="_blank">Natas: Level 15</a> : OverTheWire Wargames <br><br>
+          <a href="https://tryhackme.com/room/tokyoghoul666">Tokyo Ghoul</a> : TryHackMe <br><br>
+        </p>
+        <br><br>
+        <h3>Day 41: Nov 18 2021</h3><br>
+        <p>
+          
         </p>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
